[package]
name = "glebin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-util = "0.3.31"
glebin-protocol = { path = "../glob" }
ratatui = "0.29.0"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
