[package]
name = "glebin-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glebin"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
env_logger = "0.11.5"
futures-util = "0.3.31"
glebin-protocol = { path = "../glob" }
log = "0.4.22"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
